# ignitehealthnow

./: .gitignore  AGENT_INSTRUCTIONS.md  README.md  WARP.md
.claude/: launch.json
.playwright-mcp/: page-2026-06-26T22-37-03-096Z.yml  page-2026-06-26T23-07-42-025Z.yml  page-2026-06-26T23-08-00-608Z.yml  page-2026-06-26T23-14-52-042Z.yml  page-2026-06-26T23-20-01-879Z.yml  page-2026-06-26T23-58-27-904Z.yml  page-2026-06-26T23-58-40-758Z.yml  (+3 more)
admin/: .gitignore  (+7 more)
api/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  schema.sql  setup_db.py
api/app/: __init__.py  main.py
api/app/core/: __init__.py  config.py  encryption.py  kms.py  logging.py
api/app/middleware/: __init__.py  auth.py
api/app/models/: __init__.py  admin.py  chat.py  profile.py
api/app/repositories/: __init__.py  content_repository.py
api/app/resources/: handle_allowlist.txt  handle_denylist.txt  handle_reserved.txt
api/app/routers/: __init__.py  admin.py  chat.py  health.py  profile.py
api/app/services/: __init__.py  admin_access.py  admin_content.py  auth.py  chat.py  kb_retrieval.py  profile.py
api/migrations/: 0002_admin_content_posts.sql
api/scripts/: curl_profile.py  print_access_token.py
api/tests/: conftest.py  test_admin_access.py  test_admin_content_service.py  test_admin_router.py  test_auth_middleware.py  test_auth_service.py  test_chat_config.py  test_chat_models.py  test_chat_router.py  test_chat_service.py  test_content_repository.py  test_kb_retrieval.py  test_profile_avatar_validation.py  test_profile_encryption.py
(+238 files in other folders)
